# bitrate

./: Cargo.toml
res/: io.github.avomar.cosmic-ext-applet-bitrate.metainfo.xml
